--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,16 +1,9 @@
 {
   "manifest_version": 3,
   "name": "guichet-unique-paster",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "description": "A chrome extension to accelerate enterprise creation on guichet-unique.inpi.fr",
   "background": { "service_worker": "background.bundle.js" },
-  "permissions": [
-    "cookies",
-    "storage",
-    "activeTab",
-    "scripting",
-    "tabs",
-    "webNavigation"
-  ],
+  "permissions": ["activeTab", "scripting", "tabs"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
